--- a/META.yml
+++ b/META.yml
@@ -11,13 +11,14 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101900, CPAN::Meta::Converter version 2.101590'
+generated_by: 'Dist::Zilla version 4.102345, CPAN::Meta::Converter version 2.101590'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: XML-XSS
 requires:
+  Getopt::Long: 0
   Moose: 0
   Moose::Exporter: 0
   Moose::Role: 0
@@ -25,6 +26,7 @@ requires:
   MooseX::ClassAttribute: 0
   MooseX::Clone: 0
   MooseX::SemiAffordanceAccessor: 0
+  Perl::Tidy: 0
   Scalar::Util: 0
   XML::LibXML: 0
   overload: 0
@@ -33,4 +35,4 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=XML-XSS
   homepage: http://search.cpan.org/dist/XML-XSS/
   repository: git://github.com/yanick/xml-xss.git
-version: 0.1.3
+version: 0.2_0
