--- a/META.yml
+++ b/META.yml
@@ -17,6 +17,40 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: XML-XSS
+provides:
+  XML::XSS:
+    file: lib/XML/XSS.pm
+    version: v0.3.0
+  XML::XSS::Comment:
+    file: lib/XML/XSS/Comment.pm
+    version: v0.3.0
+  XML::XSS::Document:
+    file: lib/XML/XSS/Document.pm
+    version: v0.3.0
+  XML::XSS::Element:
+    file: lib/XML/XSS/Element.pm
+    version: v0.3.0
+  XML::XSS::ProcessingInstruction:
+    file: lib/XML/XSS/ProcessingInstruction.pm
+    version: v0.3.0
+  XML::XSS::Role::Renderer:
+    file: lib/XML/XSS/Role/Renderer.pm
+    version: v0.3.0
+  XML::XSS::Role::StyleAttribute:
+    file: lib/XML/XSS/Role/StyleAttribute.pm
+    version: v0.3.0
+  XML::XSS::StyleAttribute:
+    file: lib/XML/XSS/StyleAttribute.pm
+    version: v0.3.0
+  XML::XSS::Stylesheet::HTML2TD:
+    file: lib/XML/XSS/Stylesheet/HTML2TD.pm
+    version: v0.3.0
+  XML::XSS::Template:
+    file: lib/XML/XSS/Template.pm
+    version: v0.3.0
+  XML::XSS::Text:
+    file: lib/XML/XSS/Text.pm
+    version: v0.3.0
 requires:
   Getopt::Long: 0
   Moose: 0
@@ -35,4 +69,4 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=XML-XSS
   homepage: http://search.cpan.org/dist/XML-XSS/
   repository: git://github.com/yanick/xml-xss.git
-version: 0.2_0
+version: 0.3.0
