--- a/META.yml
+++ b/META.yml
@@ -3,15 +3,18 @@ abstract: 'XML stylesheet system'
 author:
   - 'Yanick Champoux <yanick@cpan.org>'
 build_requires:
-  Carp: 0
+  File::Find: 0
+  File::Temp: 0
   Module::Build: 0.3601
   Test::Class: 0
   Test::Class::Load: 0
   Test::More: 0.94
+  base: 0
+  strict: 0
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102345, CPAN::Meta::Converter version 2.101590'
+generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,37 +23,37 @@ name: XML-XSS
 provides:
   XML::XSS:
     file: lib/XML/XSS.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Comment:
     file: lib/XML/XSS/Comment.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Document:
     file: lib/XML/XSS/Document.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Element:
     file: lib/XML/XSS/Element.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::ProcessingInstruction:
     file: lib/XML/XSS/ProcessingInstruction.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Role::Renderer:
     file: lib/XML/XSS/Role/Renderer.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Role::StyleAttribute:
     file: lib/XML/XSS/Role/StyleAttribute.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::StyleAttribute:
     file: lib/XML/XSS/StyleAttribute.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Stylesheet::HTML2TD:
     file: lib/XML/XSS/Stylesheet/HTML2TD.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Template:
     file: lib/XML/XSS/Template.pm
-    version: v0.3.1
+    version: v0.3.2
   XML::XSS::Text:
     file: lib/XML/XSS/Text.pm
-    version: v0.3.1
+    version: v0.3.2
 requires:
   Getopt::Long: 0
   Moose: 0
@@ -64,10 +67,16 @@ requires:
   Scalar::Util: 0
   XML::LibXML: 0
   overload: 0
-  perl: 5.10.0
+  perl: v5.10.0
+  warnings: 0
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=XML-XSS
   homepage: http://search.cpan.org/dist/XML-XSS/
-  repository: git://github.com/yanick/xml-xss.git
-version: 0.3.1
-x_authority: cpan:yanick
+  repository: https://github.com/yanick/xml-xss.git
+version: 0.3.2
+x_author_pledge:
+  version: 1
+x_authority: cpan:YANICK
+x_contributors:
+  - 'Dave Rolsky <autarch@urth.org>'
+  - 'Reini Urban <rurban@cpan.org>'
